--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -10,8 +10,46 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
 
+  deploy:
+    name: Upload to Amazon S3
+    runs-on: ubuntu-latest
+    # These permissions are needed to interact with GitHub's OIDC Token endpoint.
+    permissions:
+      id-token: write
+      contents: read
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    # - name: Configure AWS credentials from Test account
+    #   uses: aws-actions/configure-aws-credentials@v1
+    #   with:
+    #     role-to-assume: arn:aws:iam::111111111111:role/my-github-actions-role-test
+    #     aws-region: us-east-1
+
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
+
+    - name: Copy files to the test website with the AWS CLI
+      run: |
+        aws s3 sync ./data/census.csv s3://bk-fastapi
+
+    # - name: Configure AWS credentials from Production account
+    #   uses: aws-actions/configure-aws-credentials@v1
+    #   with:
+    #     role-to-assume: arn:aws:iam::222222222222:role/my-github-actions-role-prod
+    #     aws-region: us-west-2
+    #
+    # - name: Copy files to the production website with the AWS CLI
+    #   run: |
+    #     aws s3 sync . s3://my-s3-prod-website-bucket
+
+  build:
     runs-on: ubuntu-latest
 
     steps:
