--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,18 +36,10 @@ jobs:
     - name: dvc setup
       uses: iterative/setup-dvc@v1
 
-    - name: dvc pull
-      run: |
-        dvc pull
-    # - name: Configure AWS credentials from Production account
-    #   uses: aws-actions/configure-aws-credentials@v1
-    #   with:
-    #     role-to-assume: arn:aws:iam::222222222222:role/my-github-actions-role-prod
-    #     aws-region: us-west-2
-    #
-    # - name: Copy files to the production website with the AWS CLI
+    # - name: dvc pull
     #   run: |
-    #     aws s3 sync . s3://my-s3-prod-website-bucket
+    #     dvc pull
+
 
   build:
     runs-on: ubuntu-latest
